# student-management

./: .env.example  .gitignore  README.md  class.graphql  images.py  pyproject.toml
student/: .env.example  __init__.py  app.py  cache.py  canvas_api.py  database.py  errors.py  filters.py  models.py  routes.py  usecases.py
student/static/: style.css
student/templates/: base.html  index.html  not_found.html
student/templates/canvas/: course.html  courses.html
student/templates/semester/: index.html
student/templates/student/: index.html
student/templates/students/: search.html
tests/: conftest.py  test_home.py  test_student.py
