[tool.poetry]
name = "student"
version = "0.1.0"
description = ""
authors = ["Timo Hermans <tmhermans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.39"
Flask-Caching = "^2.0.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
