[tool.poetry]
name = "student"
version = "0.1.0"
description = ""
authors = ["Timo Hermans <tmhermans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.39"
Flask-Caching = "^2.0.0"
python-dotenv = "^0.20.0"
Flask-DebugToolbar = "^0.13.1"
Flask-SQLAlchemy = "^2.5.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.6.0", allow-prereleases = true}
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["student"]

[tool.pyright]
venv="student-V9KJ2EKL-py3.10"
